--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
   <ol>
-    <li><a href="Ejercicio.html">Ejercicio1</a></li>
+    <li><a href="Ejercicio1.html">Ejercicio1</a></li>
     <li><a href="Ejercicio2.html">Ejercicio2</a></li>
     <li><a href="Ex3.html">Ejercicio3</a></li>
     <li><a href="Ejercicio4.html">Ejercicio4</a></li>
